# euler_proj_comp

./: CMakeLists.txt  test6.cpp  uptr.cpp
src/: CMakeLists.txt  sum_of_digits_254.cpp
tests/: CMakeLists.txt  test_sum_of_digits_254.cpp
